changed all the content and styles to hsd consultancy

--- a/blog_data.html
+++ b/blog_data.html
@@ -15,9 +15,7 @@
   <nav class="navbar navbar-dark navbar-expand-md">
     <div class="container-fluid">
       <!-- brand (left) -->
-      <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="ConfideoIT.png" alt="CIS Logo" height="40" />
-      </a>
+     <h6 style="color: white; align-items:center; margin-bottom:0%">HSD Consultancy</h6>
 
       <!-- hamburger (right) -->
       <button class="navbar-toggler ms-auto" type="button"
@@ -47,12 +45,10 @@
                 <li><a class="dropdown-item" href="implementation.html">Implementation</a></li>
 
         <li><a class="dropdown-item" href="training.html">Training</a></li>
-        <li><a class="dropdown-item" href="internship.html">Internships</a></li>
         <li><a class="dropdown-item" href="workshops.html">Workshops</a></li>
         <li><a class="dropdown-item" href="realtime-projects.html">Real Time Projects</a></li>
       </ul>
     </li>
-        <li class="nav-item"><a class="nav-link text-white" href="#clients">Clients</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="blog.html">Blog</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="contact.html">ContactUs</a></li>
@@ -63,10 +59,11 @@
   </nav>
 </header>
 
+background: radial-gradient(circle, #4B4B4B 0%, #202020 70%, #F97316 100%);
 
 
   <div class="container py-4">
-    <a href="javascript:history.back()" class="back-btn">&larr; Back</a>
+    <a href="javascript:history.back()" class="back-btn" style="color:#F97316">&larr; Back</a>
     <div class="container-flex">
       
       <div class="sidebar">
@@ -93,14 +90,14 @@
   <div class="footer-container">
     <!-- Left Section -->
     <div class="footer-left">
-      <img src="ConfideoIT.png" alt="CIS Logo" class="footer-logo">
+      <img src="hsdconsultancy.png" alt="HSD Logo" class="footer-logo">
       <p>
-        “Confideo IT – Where solutions empower businesses and training empowers people.” </p>
+       “HSD Consultancy – Delivering smart solutions and transformative training.”</p>
       <div class="social-links">
-        <a href="https://www.facebook.com/profile.php?id=61563414006847"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/confideoit/"><i class="fab fa-instagram"></i></a>
-        <a href="https://github.com/confideoit"><i class="fab fa-github "></i></a>
-        <a href="https://www.linkedin.com/company/confideo-it-services/posts/?feedView=all"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/"><i class="fab fa-github "></i></a>
+        <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
       </div>
     </div>
 
@@ -130,19 +127,19 @@
       </div>
       <div>
         <h3>Contact Info</h3>
-        <p>📞 817-988-6658</p>
-        <p>📧 info@confideoit.com</p>
+        <p>📞 7331136831</p>
+        <p>📧 hsdconsultancy3@gmail.com</p>
       </div>
     </div>
   </div>
    <div class="footer-bottom">
     <div class="footer-bottom-left">
-      © Copyright 2025. All Rights Reserved by <a href="https://confideoit.com">Confideo IT Services</a>
+      © Copyright 2025. All Rights Reserved by <a href="https://hsdconsultancy.com">HSD Consultancy</a>
     </div>
     <div class="footer-bottom-right">
-      <a href="#">Terms</a>
-      <a href="#">Privacy</a>
-      <a href="#">Support</a>
+      <a href="terms.html">Terms</a>
+      <a href="privacy.html">Privacy</a>
+      <a href="support.html">Support</a>
     </div>
   </div>
 </footer>
@@ -223,8 +220,8 @@ if (!blogId) {
         </ul>
       </div>
 
-      <div style="text-align:center; margin:50px 0;">
-        <a href="enrollment.html" class="btn btn-primary btn-lg">Enroll Now</a>
+      <div style="text-align:center; margin:50px 0; ">
+        <a href="contact.html" class="btn btn-lg" style="color:white; background: radial-gradient(circle, #4B4B4B 0%, #202020 70%, #F97316 100%);">Enroll Now</a>
       </div>
     `;
   })
@@ -283,7 +280,8 @@ if (!blogId) {
       transition: background 0.3s;
     }
     .sidebar button:hover {
-      background: #0b5ed7;
+background: radial-gradient(circle, #4B4B4B 0%, #202020 70%, #F97316 100%);
+color: white;
     }
     .content {
       flex: 3;
@@ -301,8 +299,8 @@ if (!blogId) {
     .section-title {
       font-weight: bold;
       margin-bottom: 1rem;
-      color: #0d6efd;
-      border-bottom: 2px solid #0d6efd;
+      color: #F97316;
+      border-bottom: 2px solid #F97316;
       padding-bottom: 5px;
     }
     a.back-btn {
@@ -318,7 +316,7 @@ if (!blogId) {
       margin: 50px auto;
       padding: 15px 30px;
       font-size: 1.1rem;
-      background: #198754;
+background: radial-gradient(circle, #4B4B4B 0%, #202020 70%, #F97316 100%);
       color: #fff;
       text-decoration: none;
       border-radius: 5px;
@@ -333,7 +331,7 @@ if (!blogId) {
   width: 100%;
   z-index: 999;
   /* background-color: #03042c; */
-    background: radial-gradient(circle, #1a3d8f 0%,#03042c 100%);
+background: radial-gradient(circle, #4B4B4B 0%, #202020 70%, #F97316 100%);
 
 }
 .navbar {
@@ -342,19 +340,6 @@ if (!blogId) {
   align-items: center;
   padding: 4px 16px !important;
   min-height: 56px;
-}
-
-.navbar-brand {
-  padding-left: 8px;
-}
-
-
-
-.navbar-brand img {
-  height: 60x;
-  width: 60px;
-  object-fit: cover;
-  border-radius: 50%;
 }
 
 
@@ -377,7 +362,7 @@ if (!blogId) {
 /* footer-section */
 .footer {
   /* background-color: #03042c; */
-          background: radial-gradient(circle, #1a3d8f 0%,#03042c 100%);
+background: radial-gradient(circle, #4B4B4B 0%, #202020 70%, #F97316 100%);
 
   color: white;
   padding: 40px 0;
