--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy - Confideo IT Services</title>
+  <title>Privacy Policy - HSD Consultancy</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -51,16 +51,16 @@
 </head>
 <body>
   <header>
-    <h1>Confideo IT Services</h1>
+    <h1>HSD Consultancy</h1>
   </header>
   <main>
     <h1>Privacy Policy</h1>
-    <p>At Confideo IT Services, we value your privacy. We collect only the necessary information to provide our services and ensure a smooth experience.</p>
+    <p>At HSD Consultancy, we value your privacy. We collect only the necessary information to provide our services and ensure a smooth experience.</p>
     <p>We do not share your personal information with third parties without your consent.</p>
-    <p>For any questions regarding your data, please contact us at <a href="mailto:info@confideoit.com">info@confideoit.com</a>.</p>
+    <p>For any questions regarding your data, please contact us at <a href="mailto:hsdconsultancy3@gmail.com">hsdconsultancy3@gmail.com</a>.</p>
   </main>
   <footer>
-    &copy; 2025 Confideo IT Services. All rights reserved.
+    &copy; 2025 HSD Consultancy. All rights reserved.
   </footer>
 </body>
 </html>
