--- a/support.html
+++ b/support.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Support - Confideo IT Services</title>
+  <title>Support - HSD Consultancy</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -58,22 +58,22 @@
 </head>
 <body>
   <header>
-    <h1>Confideo IT Services</h1>
+    <h1>HSD Consultancy</h1>
   </header>
   <main>
     <h1>Support</h1>
     <p>If you need assistance with our services, we are here to help. Our support team can answer questions, resolve issues, and guide you through any process.</p>
     
     <div class="contact-info">
-      <p><strong>Email:</strong> <a href="mailto:support@confideoit.com">support@confideoit.com</a></p>
-      <p><strong>Phone:</strong> +91  817-988-6658</p>
+      <p><strong>Email:</strong> <a href="mailto:hsdconsultancy3@gmail.com">hsdconsultancy3@gmail.com</a></p>
+      <p><strong>Phone:</strong> +91  7331136831</p>
       <p><strong>Business Hours:</strong> Monday – Friday, 9:00 AM – 6:00 PM IST</p>
     </div>
 
     <p>For urgent issues, please contact us via email or phone, and we will respond as quickly as possible.</p>
   </main>
   <footer>
-    &copy; 2025 Confideo IT Services. All rights reserved.
+    &copy; 2025 HSD Consultancy. All rights reserved.
   </footer>
 </body>
 </html>
