--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Terms and Conditions - Confideo IT Services</title>
+  <title>Terms and Conditions - HSD Consultancy</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -51,16 +51,16 @@
 </head>
 <body>
   <header>
-    <h1>Confideo IT Services</h1>
+    <h1>HSD Consultancy</h1>
   </header>
   <main>
     <h1>Terms and Conditions</h1>
-    <p>By using Confideo IT Services’ website and services, you agree to comply with our terms and conditions.</p>
+    <p>By using HSD Consultancy’ website and services, you agree to comply with our terms and conditions.</p>
     <p>We may update these terms from time to time. Continued use of our services constitutes acceptance of the updated terms.</p>
-    <p>If you have questions, contact us at <a href="mailto:info@confideoit.com">info@confideoit.com</a>.</p>
+    <p>If you have questions, contact us at <a href="mailto:hsdconsultancy3@gmail.com">hsdconsultancy3@gmail.com</a>.</p>
   </main>
   <footer>
-    &copy; 2025 Confideo IT Services. All rights reserved.
+    &copy; 2025 HSD Consultancy. All rights reserved.
   </footer>
 </body>
 </html>
