--- a/blog.html
+++ b/blog.html
@@ -23,9 +23,7 @@
   <nav class="navbar navbar-dark navbar-expand-md">
     <div class="container-fluid">
       <!-- brand (left) -->
-      <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="ConfideoIT.png" alt="CIS Logo" height="40" />
-      </a>
+      <h6 style="color: white; align-items:center; margin-bottom:0%">HSD Consultancy</h6>
 
       <!-- hamburger (right) -->
       <button class="navbar-toggler ms-auto" type="button"
@@ -55,12 +53,10 @@
                <li><a class="dropdown-item" href="implementation.html">Implementation</a></li>
 
         <li><a class="dropdown-item" href="training.html">Training</a></li>
-        <li><a class="dropdown-item" href="internship.html">Internships</a></li>
         <li><a class="dropdown-item" href="workshops.html">Workshops</a></li>
         <li><a class="dropdown-item" href="realtime-projects.html">Real Time Projects</a></li>
       </ul>
     </li>
-        <li class="nav-item"><a class="nav-link text-white" href="#clients">Clients</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="blog.html">Blog</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="contact.html">ContactUs</a></li>
@@ -81,24 +77,30 @@
       <!-- Middle Blogs -->
       <div class="col-lg-7 col-md-6 col-12 middle-col">
         <div class="d-flex justify-content-between align-items-center mb-3">
-          <h5 style="font-weight: bold; color:blue" id="courseTitle">Courses</h5>
-          <a id="viewAllBtn" href="#" class="btn btn-primary btn-sm">View All</a>
+          <h5 style="font-weight: bold; color:#F97316" id="courseTitle">Courses</h5>
+          <a id="viewAllBtn" href="#" style="background-color:#F97316 ; border: 1px solid grey" class="btn btn-primary btn-sm">View All</a>
         </div>
         <div class="row" id="blogContainer"></div>
       </div>
 
       <!-- Right Sidebar -->
       <div class="col-lg-3 col-md-3 col-12 right-col">
-        <h4 style="font-weight: bold; text-align:center; margin-top:30px; margin-bottom:30px; color:blue">Get in Touch</h4>
+        <h4 style="font-weight: bold; text-align:center; margin-top:30px; margin-bottom:30px; color:#F97316">Get in Touch</h4>
         <form id="contactForm" class="mb-4">
           <div class="mb-3"><input name="fullname" type="text" class="form-control" placeholder="Full Name" required></div>
           <div class="mb-3"><input name="email" type="email" class="form-control" placeholder="Email" required></div>
           <div class="mb-3"><input name="mobile" type="tel" class="form-control" placeholder="Mobile" required></div>
           <div class="mb-3"><textarea name="message" class="form-control" rows="4" placeholder="Your Message" required></textarea></div>
-          <button class="btn btn-success w-100" type="submit">Submit</button>
+          <button class="btn btn-success w-100" style="background: radial-gradient(circle, #4B4B4B 0%, #202020 70%, #F97316 100%);" type="submit">Submit</button>
         </form>
+        <script>
+  document.getElementById('contactForm').addEventListener('submit', function (e) {
+    e.preventDefault(); // stop normal submission
+    window.location.href = 'contact.html'; // redirect manually
+  });
+</script>
 
-        <h4 style="font-weight: bold ; text-align:center; margin-top:60px; margin-bottom:30px; color:blue">Trending Courses</h4>
+        <h4 style="font-weight: bold ; text-align:center; margin-top:60px; margin-bottom:30px; color:#F97316">Trending Courses</h4>
         <div id="courseCarousel" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner" id="carouselContent"></div>
         </div>
@@ -126,7 +128,7 @@
       font-weight: 500;
     }
     .course-list li.active {
-      background: #007bff;
+background: radial-gradient(circle, #4B4B4B 0%, #202020 70%, #F97316 100%);
       color: #fff;
       border-radius: 4px;
     }
@@ -177,7 +179,7 @@
 
   .course-list li:hover {
     background: #e6f0ff;
-    color: #0056b3;
+    color: #0056b3 !important;
   }
 
   .course-list li.active {
@@ -200,18 +202,20 @@
   </style>
 
 
+<!-- Footer -->
+  <!-- Contact Section -->
 <footer id="contact" class="footer">
   <div class="footer-container">
     <!-- Left Section -->
     <div class="footer-left">
-      <img src="ConfideoIT.png" alt="CIS Logo" class="footer-logo">
+      <img src="hsdconsultancy.png" alt="HSD Logo" class="footer-logo">
       <p>
-        “Confideo IT – Where solutions empower businesses and training empowers people.” </p>
+       “HSD Consultancy – Delivering smart solutions and transformative training.”</p>
       <div class="social-links">
-        <a href="https://www.facebook.com/profile.php?id=61563414006847"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/confideoit/"><i class="fab fa-instagram"></i></a>
-        <a href="https://github.com/confideoit"><i class="fab fa-github "></i></a>
-        <a href="https://www.linkedin.com/company/confideo-it-services/posts/?feedView=all"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/"><i class="fab fa-github "></i></a>
+        <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
       </div>
     </div>
 
@@ -241,14 +245,14 @@
       </div>
       <div>
         <h3>Contact Info</h3>
-        <p>📞 817-988-6658</p>
-        <p>📧 info@confideoit.com</p>
+        <p>📞 7331136831</p>
+        <p>📧 hsdconsultancy3@gmail.com</p>
       </div>
     </div>
   </div>
    <div class="footer-bottom">
     <div class="footer-bottom-left">
-      © Copyright 2025. All Rights Reserved by <a href="https://confideoit.com">Confideo IT Services</a>
+      © Copyright 2025. All Rights Reserved by <a href="https://hsdconsultancy.com">HSD Consultancy</a>
     </div>
     <div class="footer-bottom-right">
       <a href="terms.html">Terms</a>
@@ -261,31 +265,6 @@
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-<script>
-  emailjs.init('JeA5VL-uQxlPo1E0s'); // Replace with your EmailJS public key
-
-  document.getElementById('contactForm').addEventListener('submit', function(e) {
-    e.preventDefault();
-    
-    const formData = {
-      fullname: this.fullname.value,
-      email: this.email.value,
-      mobile: this.mobile.value,
-      message: this.message.value
-    };
-
-    emailjs.send('service_x6iafst', 'template_ni0qdme', formData)
-      .then((response) => {
-        console.log('SUCCESS!', response.status, response.text);
-        alert('Your message was sent successfully!');
-        this.reset();
-      }, (error) => {
-        console.error('FAILED...', error);
-        alert('Oops! Something went wrong. Please try again later.');
-      });
-  });
-</script>
-
 
 
 <script>
@@ -367,7 +346,7 @@ document.addEventListener('DOMContentLoaded', () => {
             <h6 class="card-title mb-2">${escapeHtml(blog.title)}</h6>
             <p class="card-text flex-grow-1">${escapeHtml(blog.excerpt || blog.content || '').slice(0,180)}${(blog.excerpt || blog.content).length > 180 ? '...' : ''}</p>
             <div class="mt-2">
-              <a href="blog_data.html?course=${encodeURIComponent(course.id)}&blog=${encodeURIComponent(blogId)}" class="btn btn-sm btn-primary">Read More</a>
+              <a href="blog_data.html?course=${encodeURIComponent(course.id)}&blog=${encodeURIComponent(blogId)}" class="btn btn-sm btn-primary" style="background-color:#F97316; border:1px solid grey">Read More</a>
             </div>
           </div>
         </div>`;
@@ -387,14 +366,12 @@ document.addEventListener('DOMContentLoaded', () => {
           <img src="${escapeHtml(c.image)}" class="card-img-top" alt="${escapeHtml(c.name)}">
           <div class="card-body d-flex flex-column">
             <h6 class="text-center mb-2">${escapeHtml(c.name)}</h6>
-            <a href="${escapeHtml(courseFile)}" class="btn btn-sm btn-outline-primary mx-auto mt-2" style="padding: 0.5rem 1rem;">See More</a>
+            <a href="${escapeHtml(courseFile)}" class="btn btn-sm mx-auto mt-2" style="padding: 0.5rem 1rem; color:#F97316; font-weight:bold; border: 1px solid grey;">See More</a>
           </div>
         </div>
       </div>`;
   });
 }
-
-
 
   // when a course is selected
   function selectCourse(courseId) {
