--- a/blog_course.html
+++ b/blog_course.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div class="container py-4">
-    <a href="blog.html" class="btn btn-link">&larr; Back</a>
-    <h1 style="text-align: center; margin-bottom:30px; color:blue" id="title">Course</h1>
+    <a href="blog.html" style="color:#F97316" class="btn btn-link">&larr; Back</a>
+    <h1 style="text-align: center; margin-bottom:30px; color:#F97316" id="title">Course</h1>
     <div id="allBlogs" class="row mt-3"></div>
   </div>
 
@@ -30,7 +30,7 @@ fetch('courses.json').then(r=>r.json()).then(data=>{
         <div class="card-body d-flex flex-column">
           <h6>${escapeHtml(b.title)}</h6>
           <p class="flex-grow-1">${escapeHtml(b.excerpt || b.content || '').slice(0,160)}${(b.excerpt||b.content||'').length>160 ? '...' : ''}</p>
-          <a style="height:40px" class="btn btn-primary btn-sm mt-2" href="blog_data.html?course=${encodeURIComponent(course.id)}&blog=${encodeURIComponent(b.id)}">Read full</a>
+          <a style="height:40px; background: radial-gradient(circle, #4B4B4B 0%, #202020 70%, #F97316 100%);" class="btn btn-primary btn-sm mt-2" href="blog_data.html?course=${encodeURIComponent(course.id)}&blog=${encodeURIComponent(b.id)}">Read full</a>
         </div>
       </div>
     </div>`).join('');
@@ -38,7 +38,7 @@ fetch('courses.json').then(r=>r.json()).then(data=>{
 </script>
 
 <!-- Scroll to Top Button -->
-<button id="scrollTopBtn" title="Go to top">&#8679;</button>
+<button style="color: black; background-color:#F97316" id="scrollTopBtn" title="Go to top">&#8679;</button>
 
 <script>
 // Get the button
