--- a/courses.html
+++ b/courses.html
@@ -19,9 +19,7 @@
   <nav class="navbar navbar-dark navbar-expand-md">
     <div class="container-fluid">
       <!-- brand (left) -->
-      <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="ConfideoIT.png" alt="CIS Logo" height="40" />
-      </a>
+      <h6>HSD Consultancy</h6>
 
       <!-- hamburger (right) -->
       <button class="navbar-toggler ms-auto" type="button"
@@ -51,12 +49,10 @@
                 <li><a class="dropdown-item" href="implementation.html">Implementation</a></li>
 
         <li><a class="dropdown-item" href="training.html">Training</a></li>
-        <li><a class="dropdown-item" href="internship.html">Internships</a></li>
         <li><a class="dropdown-item" href="workshops.html">Workshops</a></li>
         <li><a class="dropdown-item" href="realtime-projects.html">Real Time Projects</a></li>
       </ul>
     </li>
-        <li class="nav-item"><a class="nav-link text-white" href="index.html">Clients</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="blog.html">Blog</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="contact.html">ContactUs</a></li>
@@ -148,24 +144,30 @@
 </section>
 
 <!-- Footer -->
+  <!-- Contact Section -->
 <footer id="contact" class="footer">
   <div class="footer-container">
+    <!-- Left Section -->
     <div class="footer-left">
-      <img src="ConfideoIT.png" alt="CIS Logo" class="footer-logo">
-      <p>“Confideo IT – Where solutions empower businesses and training empowers people.”</p>
+      <img src="hsdconsultancy.png" alt="HSD Logo" class="footer-logo">
+      <p>
+       “HSD Consultancy – Delivering smart solutions and transformative training.”</p>
       <div class="social-links">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-github"></i></a>
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/"><i class="fab fa-github "></i></a>
+        <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
       </div>
     </div>
+
+    <!-- Right Section -->
     <div class="footer-right">
       <div>
         <h3>About</h3>
         <ul>
           <li><a href="about.html">About Us</a></li>
           <li><a href="courses.html">Courses</a></li>
+          <!-- <li><a href="#">News & Blogs</a></li> -->
           <li><a href="#">Become a Teacher</a></li>
           <li><a href="#">Events</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -174,6 +176,7 @@
       <div>
         <h3>Quick Link</h3>
         <ul>
+          <!-- <li><a href="#">Live Workshop</a></li> -->
           <li><a href="#">Free Courses</a></li>
           <li><a href="#">Admission</a></li>
           <li><a href="#">Request a Demo</a></li>
@@ -183,14 +186,14 @@
       </div>
       <div>
         <h3>Contact Info</h3>
-        <p>📞 817-988-6658</p>
-        <p>📧 info@confideoit.com</p>
+        <p>📞 7331136831</p>
+        <p>📧 hsdconsultancy3@gmail.com</p>
       </div>
     </div>
   </div>
-  <div class="footer-bottom">
+   <div class="footer-bottom">
     <div class="footer-bottom-left">
-      © Copyright 2025. All Rights Reserved by <a href="https://confideoit.com">Confideo IT Services</a>
+      © Copyright 2025. All Rights Reserved by <a href="https://hsdconsultancy.com">HSD Consultancy</a>
     </div>
     <div class="footer-bottom-right">
       <a href="terms.html">Terms</a>
@@ -234,6 +237,7 @@
     font-size: 32px;
     font-weight: bold;
     margin-top: 20px;
+    color: #F97316;
   }
 
   /* Cards Grid */
@@ -272,7 +276,7 @@
   .course-title {
     font-size: 20px;
     margin: 10px 0;
-    color: #222 !important;
+    color: #F97316 !important;
     font-weight: bold;
   }
 
@@ -291,7 +295,7 @@
     display: inline-block;
     margin-top: 8px;
     padding: 10px 18px;
-    background: #007BFF;
+background: radial-gradient(circle, #4B4B4B 0%, #202020 70%, #F97316 100%);
     color: white;
     font-weight: bold;
     border-radius: 6px;
@@ -300,7 +304,7 @@
     font-size: 15px;
   }
   .enroll-btn:hover {
-    background: #0056b3;
+    background: #202020;
   }
 </style>
 
@@ -313,6 +317,7 @@ function goBack() {
   }
 }
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
