--- a/implementation.html
+++ b/implementation.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>training</title>
+  <title>Solutions</title>
   <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -51,6 +51,7 @@
       font-size: 20px;
       font-weight: bold;
       margin-bottom: 10px;
+      color:#F97316 !important;
     }
 
     .course-rating {
@@ -63,7 +64,7 @@
       display: inline-block;
       margin-top: 10px;
       padding: 10px 18px;
-      background: #007BFF; 
+background: radial-gradient(circle, #4B4B4B 0%, #202020 70%, #F97316 100%);
       color: white;
       font-weight: bold;
       border-radius: 6px;
@@ -72,7 +73,7 @@
     }
 
     .enroll-btn:hover {
-      background: #0056b3;
+      background: #F97316;
     }
   </style>
 </head>
@@ -86,9 +87,7 @@
   <nav class="navbar navbar-dark navbar-expand-md">
     <div class="container-fluid">
       <!-- brand (left) -->
-      <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="ConfideoIT.png" alt="CIS Logo" height="40" />
-      </a>
+      <h6>HSD Consultancy</h6>
 
       <!-- hamburger (right) -->
       <button class="navbar-toggler ms-auto" type="button"
@@ -118,12 +117,10 @@
                 <li><a class="dropdown-item" href="implementation.html">Implementation</a></li>
 
         <li><a class="dropdown-item" href="training.html">Training</a></li>
-        <li><a class="dropdown-item" href="internship.html">Internships</a></li>
         <li><a class="dropdown-item" href="workshops.html">Workshops</a></li>
         <li><a class="dropdown-item" href="realtime-projects.html">Real Time Projects</a></li>
       </ul>
     </li>
-        <li class="nav-item"><a class="nav-link text-white" href="index.html">Clients</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="blog.html">Blog</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="contact.html">ContactUs</a></li>
@@ -143,7 +140,7 @@
       <div class="course-content">
         <h3 class="course-title">CLOUD-SOLUTION</h3>
         <div class="course-rating">★★★★★ <span>(5.0 / 3 Ratings)</span></div>
-        <a href="enrollment.html" class="enroll-btn">CONSULT</a>
+        <a href="contact.html" class="enroll-btn">CONSULT</a>
       </div>
     </div>
 
@@ -152,7 +149,7 @@
       <div class="course-content">
         <h3 class="course-title">WEB DEVELOPMENT</h3>
         <div class="course-rating">★★★★★ <span>(5.0 / 3 Ratings)</span></div>
-        <a href="enrollment.html" class="enroll-btn">CONSULT</a>
+        <a href="contact.html" class="enroll-btn">CONSULT</a>
       </div>
     </div>
 
@@ -161,31 +158,69 @@
       <div class="course-content">
         <h3 class="course-title">DIGITAL MARKETING</h3>
         <div class="course-rating">★★★★★ <span>(5.0 / 3 Ratings)</span></div>
-        <a href="enrollment.html" class="enroll-btn">CONSULT</a>
+        <a href="contact.html" class="enroll-btn">CONSULT</a>
       </div>
     </div>
+
+    <!-- SAP Implementation -->
+    <div class="service-card">
+      <img src="sap.png" alt="SAP Implementation">
+      <div class="course-content">
+        <h3 class="course-title">SAP IMPLEMENTATION</h3>
+        <div class="course-rating">★★★★★ <span>(5.0 / 3 Ratings)</span></div>
+        <a href="contact.html" class="enroll-btn">CONSULT</a>
+      </div>
+    </div>
+
+    <!-- Oracle ERP Implementation -->
+    <div class="service-card">
+      <img src="oracle-erp.png" alt="Oracle ERP Implementation">
+      <div class="course-content">
+        <h3 class="course-title">ORACLE ERP IMPLEMENTATION</h3>
+        <div class="course-rating">★★★★★ <span>(5.0 / 3 Ratings)</span></div>
+        <a href="contact.html" class="enroll-btn">CONSULT</a>
+      </div>
+    </div>
+
+    <!-- AI/ML Cloud Solutions -->
+    <div class="service-card">
+      <img src="ai-ml.png" alt="AI/ML Cloud Solutions">
+      <div class="course-content">
+        <h3 class="course-title">AI / ML CLOUD SOLUTIONS</h3>
+        <div class="course-rating">★★★★★ <span>(5.0 / 3 Ratings)</span></div>
+        <a href="contact.html" class="enroll-btn">CONSULT</a>
+      </div>
+    </div>
+
+
   </div>
 </section>
 
 <!-- Footer -->
+  <!-- Contact Section -->
 <footer id="contact" class="footer">
   <div class="footer-container">
+    <!-- Left Section -->
     <div class="footer-left">
-      <img src="ConfideoIT.png" alt="CIS Logo" class="footer-logo">
-      <p>“Confideo IT – Where solutions empower businesses and training empowers people.”</p>
+      <img src="hsdconsultancy.png" alt="HSD Logo" class="footer-logo">
+      <p>
+       “HSD Consultancy – Delivering smart solutions and transformative training.”</p>
       <div class="social-links">
-        <a href="https://www.facebook.com/profile.php?id=61563414006847"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/confideoit/"><i class="fab fa-instagram"></i></a>
-        <a href="https://github.com/confideoit"><i class="fab fa-github"></i></a>
-        <a href="https://www.linkedin.com/company/confideo-it-services/posts/?feedView=all"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/"><i class="fab fa-github "></i></a>
+        <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
       </div>
     </div>
+
+    <!-- Right Section -->
     <div class="footer-right">
       <div>
         <h3>About</h3>
         <ul>
           <li><a href="about.html">About Us</a></li>
           <li><a href="courses.html">Courses</a></li>
+          <!-- <li><a href="#">News & Blogs</a></li> -->
           <li><a href="#">Become a Teacher</a></li>
           <li><a href="#">Events</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -194,8 +229,9 @@
       <div>
         <h3>Quick Link</h3>
         <ul>
+          <!-- <li><a href="#">Live Workshop</a></li> -->
           <li><a href="#">Free Courses</a></li>
-          <li><a href="#">Addmition</a></li>
+          <li><a href="#">Admission</a></li>
           <li><a href="#">Request a Demo</a></li>
           <li><a href="#">Media Relations</a></li>
           <li><a href="#">Students</a></li>
@@ -203,14 +239,14 @@
       </div>
       <div>
         <h3>Contact Info</h3>
-        <p>📞 817-988-6658</p>
-        <p>📧 info@confideoit.com</p>
+        <p>📞 7331136831</p>
+        <p>📧 hsdconsultancy3@gmail.com</p>
       </div>
     </div>
   </div>
-  <div class="footer-bottom">
+   <div class="footer-bottom">
     <div class="footer-bottom-left">
-      © Copyright 2025. All Rights Reserved by <a href="https://confideoit.com">Confideo IT Services</a>
+      © Copyright 2025. All Rights Reserved by <a href="https://hsdconsultancy.com">HSD Consultancy</a>
     </div>
     <div class="footer-bottom-right">
       <a href="terms.html">Terms</a>
