--- a/training.html
+++ b/training.html
@@ -17,7 +17,7 @@
   width: 100%;
   z-index: 999;
   /* background-color: #03042c; */
-    background: radial-gradient(circle, #1a3d8f 0%,#03042c 100%);
+background: radial-gradient(circle, #4B4B4B 0%, #202020 70%, #F97316 100%);
 
 }
 .navbar {
@@ -26,19 +26,6 @@
   align-items: center;
   padding: 4px 16px !important;
   min-height: 56px;
-}
-
-.navbar-brand {
-  padding-left: 8px;
-}
-
-
-
-.navbar-brand img {
-  height: 60x;
-  width: 60px;
-  object-fit: cover;
-  border-radius: 50%;
 }
 
 
@@ -62,6 +49,7 @@
       margin-top: 80px;
       text-align: center;
       font-weight: bold;
+      color: #F97316;
     }
 
     .cards-container {
@@ -102,6 +90,7 @@
       font-size: 1.2rem;
       font-weight: bold;
       margin-bottom: 8px;
+      color: #F97316 !important;
     }
 
     .course-rating {
@@ -117,7 +106,7 @@
     .enroll-btn {
       display: inline-block;
       padding: 8px 15px;
-      background: #28a745;
+background: radial-gradient(circle, #4B4B4B 0%, #202020 70%, #F97316 100%);
       color: white;
       border-radius: 6px;
       text-decoration: none;
@@ -194,7 +183,7 @@
 
     .footer {
   /* background-color: #03042c; */
-          background: radial-gradient(circle, #1a3d8f 0%,#03042c 100%);
+background: radial-gradient(circle, #4B4B4B 0%, #202020 70%, #F97316 100%);
 
   color: white;
   padding: 40px 0;
@@ -390,9 +379,7 @@
   <nav class="navbar navbar-dark navbar-expand-md">
     <div class="container-fluid">
       <!-- brand (left) -->
-      <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="ConfideoIT.png" alt="CIS Logo" height="40" />
-      </a>
+      <h6 style="color: white; align-items:center; margin-bottom:0%"> HSD Consultancy</h6>
 
       <!-- hamburger (right) -->
       <button class="navbar-toggler ms-auto" type="button"
@@ -422,12 +409,10 @@
                 <li><a class="dropdown-item" href="implementation.html">Implementation</a></li>
 
         <li><a class="dropdown-item" href="training.html">Training</a></li>
-        <li><a class="dropdown-item" href="internship.html">Internships</a></li>
         <li><a class="dropdown-item" href="workshops.html">Workshops</a></li>
         <li><a class="dropdown-item" href="realtime-projects.html">Real Time Projects</a></li>
       </ul>
     </li>
-        <li class="nav-item"><a class="nav-link text-white" href="index.html">Clients</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="blog.html">Blog</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="contact.html">ContactUs</a></li>
@@ -531,24 +516,31 @@
   </div>
 </section>
 
+<!-- Footer -->
+  <!-- Contact Section -->
 <footer id="contact" class="footer">
   <div class="footer-container">
+    <!-- Left Section -->
     <div class="footer-left">
-      <img src="ConfideoIT.png" alt="CIS Logo" class="footer-logo">
-      <p>“Confideo IT – Where solutions empower businesses and training empowers people.”</p>
+      <img src="hsdconsultancy.png" alt="HSD Logo" class="footer-logo">
+      <p>
+       “HSD Consultancy – Delivering smart solutions and transformative training.”</p>
       <div class="social-links">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-github "></i></a>
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/"><i class="fab fa-github "></i></a>
+        <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
       </div>
     </div>
+
+    <!-- Right Section -->
     <div class="footer-right">
       <div>
         <h3>About</h3>
         <ul>
           <li><a href="about.html">About Us</a></li>
           <li><a href="courses.html">Courses</a></li>
+          <!-- <li><a href="#">News & Blogs</a></li> -->
           <li><a href="#">Become a Teacher</a></li>
           <li><a href="#">Events</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -557,6 +549,7 @@
       <div>
         <h3>Quick Link</h3>
         <ul>
+          <!-- <li><a href="#">Live Workshop</a></li> -->
           <li><a href="#">Free Courses</a></li>
           <li><a href="#">Admission</a></li>
           <li><a href="#">Request a Demo</a></li>
@@ -566,14 +559,14 @@
       </div>
       <div>
         <h3>Contact Info</h3>
-        <p>📞 817-988-6658</p>
-        <p>📧 info@confideoit.com</p>
+        <p>📞 7331136831</p>
+        <p>📧 hsdconsultancy3@gmail.com</p>
       </div>
     </div>
   </div>
-  <div class="footer-bottom">
+   <div class="footer-bottom">
     <div class="footer-bottom-left">
-      © Copyright 2025. All Rights Reserved by <a href="https://confideoit.com">Confideo IT Services</a>
+      © Copyright 2025. All Rights Reserved by <a href="https://hsdconsultancy.com">HSD Consultancy</a>
     </div>
     <div class="footer-bottom-right">
       <a href="terms.html">Terms</a>
